tests/error/trace-no-force.uplc
(program 0.0.0 [[(builtin trace) (con string "Ola")] (con integer 2)])